feat(Dockerfile): add nginx-module-vts

--- a/nginx.conf
+++ b/nginx.conf
@@ -68,4 +68,13 @@ http {
     error_page 500 502 503 504 /50x.html;
 
     include /etc/nginx/conf.d/*.conf;
+
+    vhost_traffic_status_zone;
+    server {
+        listen 80;
+        location /status {
+            vhost_traffic_status_display;
+            vhost_traffic_status_display_format html;
+        }
+    }
 }
